# sophosapi

./: .gitignore  .pre-commit-config.yaml  API Deviations.md  CONTRIBUTING.md  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
sophosapi/: __init__.py  api_factory.py  client.py  request.py  response.py  tags_of_lists.py
tests/: test_api_factory.py
