[metadata]
name = sophosapi
version = 0.1
description = A python SDK to manages Sophos SFOS Firewalls.
long_description = A python SDK to manages Sophos SFOS Firewalls.
long_description_content_type = text
url = https://github.com/stevensultana/sophosapi
author = Steven Sultana
author_email = sultsteven@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    defusedxml
    python-dotenv
